--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,6 +4,8 @@
 html, body {
     box-sizing: border-box;
     margin: 0;
+    font-family: Arial;
+    text-align: center;
 }
 
 h1 {
@@ -13,4 +15,16 @@ h1 {
 #map {
   height: 100vh;
   width: 100%;
+}
+
+.sidebar {
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: #fff;
+  box-shadow: 3px 0px 9px #e3e3e3;
+  text-align: left !important
 }
