--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -28,3 +28,13 @@ h1 {
   box-shadow: 3px 0px 9px #e3e3e3;
   text-align: left !important
 }
+
+#info-box {
+  width: 100px;
+  height: 100px;
+  color: darkblue;
+}
+#info-box2 {
+  width: 100px;
+  height: 100px;
+}
